0.9.0 (currently working on)
- [#2953] Fix: Use TYPO3's wrapper for the multibyte string functions
- [#2971] Fix: Crash/SQL error in the list view if the static template is not included
- [#2948] Change: Change the payment methods field in table tx_seminars_seminars to an unsigned integer
- [#2956] Fix: Two tests failures in seminars_pi1 testcase
- [#2963] Fix: Registration crashes with fatal error
- [#2923] Feature: In the list view, show registration begin date for events with registration_begin_date in future
- [#2941] Feature: Add filtering by date range to the seminar bag builder

0.8.0 (branched 2009-04-24)
- [#2922] Feature: Hide the registration link in the list view when registration_begin_date is in future
- [#2488] Fix: Test failure testTypoScriptConfigurationIsLoaded
- [#2925] Feature: Show the organizers description in the single view, if not empty
- [#2954] Change: Move locallang_csh_seminars.xml to Resources/Private/Language/locallang_csh_seminars.xml
- [#1680] Remove the XCLASS for t3lib_tcemain
- [#2711] Fix: $BE_USER needs to be marked as global in tx_seminars_flexForms::__construct
- [#961] Change: Require TYPO3 4.2
- [#2952] Change: Move tca.php to Configuration/TCA/tca.php
- [#1142] Change: Require PHP 5.2
- [#2900] Change: Change the event-payment method relations to real m:n relations
- [#2947] Change: Move the HTML for the payment method list from the event model to the template
- [#2929] Change: Move notifyAttendee() and notifyOrganizers() to the registrationmanager
- [#2936] Feature: Add a flexform configuration for the Search Widget in the list view
- [#2946] Change: Replace tx_seminars_seminar::getAdditionalInformationRaw() with tx_seminars_seminar::getAdditionalInformation()
- [#2760] Change: Replace tx_seminars_seminar::getDescription() with tx_seminars_seminar::getDescriptionRaw()
- [#1740] Fix: Delete the editorcfg entry from ext_localconf.php plus the related files